--- a/src/main/resources/static/webApp/manager/serviceInfo.html
+++ b/src/main/resources/static/webApp/manager/serviceInfo.html
@@ -23,7 +23,43 @@
 			</div>
 		</div>
 		<div class="layui-form-item operate-bar" style="margin:0;padding:0 10px;">
-			<div class="layui-input-block">
+			<div class="layui-inline">
+				<label class="layui-form-label">所属机构名称</label>
+				<div class="layui-input-inline">
+					<select id="ssjgmc">
+
+					</select>
+
+				</div>
+			</div>
+			<div class="layui-inline">
+				<label class="layui-form-label">残疾人服务内容大类</label>
+				<div class="layui-input-inline">
+					<select id="fwnrdl">
+						<option value="">请选择</option>
+						<option value="1">日间照料</option>
+						<option value="2">辅助性就业</option>
+						<option value="3">康复服务</option>
+						<option value="4">文体活动</option>
+						<option value="5">学习培训</option>
+						<option value="6">志愿者服务</option>
+						<option value="7">其他</option>
+					</select>
+
+				</div>
+			</div>
+			<div class="layui-inline">
+				<label class="layui-form-label">日期范围</label>
+				<div class="layui-input-inline">
+					<input type="text" class="layui-input" id="projectTime" placeholder=" - ">
+				</div>
+			</div>
+			<div class="layui-inline">
+				<button id="refreshTab" type="button" class="layui-btn layui-btn-sm layui-btn"><i
+						class="layui-icon  layui-icon-search"></i>查询
+				</button>
+			</div>
+			<div class="layui-input-block" style="float:right;">
 				<span onclick="exportfile()" id="export" style="margin-right: 10px;"><i
 						class="layui-icon layui-icon-file"></i>导出Excel
 				</span>
@@ -124,12 +160,37 @@
 	<a class="layui-btn layui-btn-xs" lay-event="edit">查看</a>
 </script>
 <script>
-	layui.use(['table','form','layer'], function(){
+	layui.use(['table','form','layer','laydate'], function(){
 		var table = layui.table;
+		var laydate = layui.laydate;
         var form = layui.form;
-		table.render({
+
+        //日期范围
+        laydate.render({
+            elem: '#projectTime'
+            ,range: true
+        });
+
+        $.ajax({
+            type: "get",
+            url: "/api/org/getListByDistrict?district=雨花台区",
+            success: function (data) {
+                if(data.data){
+                    var arry = data.data;
+                    var html = ['<option value="">请选择</option>'];
+                    for (var i = 0; i < arry.length; i++) {
+                        html.push('<option value="'+arry[i].id+'">'+arry[i].adminName+'</option>')
+                    }
+                    $("#ssjgmc").html(html.join(""));
+                    form.render();
+				}
+
+            }
+        });
+
+        var tableIns = table.render({
 			elem: '#mainTable',
-			url:'/api/project/getPagesByDistrict?district=雨花台区&sorts=modifyTime',
+			url:'/api/project/getPagesByDistrict?district=雨花台区&sorts=modifyTime&organizationId='+($("ssjgmc").val()||"")+'&projectTypeId='+($("fwnrdl").val()||""),
             request: {
                 pageName: 'page', //页码的参数名称，默认：page
                 limitName: 'number' //每页数据量的参数名，默认：limit
@@ -162,6 +223,16 @@
 			]]
 			,page: true
 		});
+
+        $("#refreshTab").click(function () {
+            var start = "";
+            var end = "";
+            if($("#projectTime").val()){
+                start = $("#projectTime").val().split(" - ")[0]
+                end = $("#projectTime").val().split(" - ")[1]
+			}
+            tableIns.reload({url: '/api/project/getPagesByDistrict?district=雨花台区&sorts=modifyTime&organizationId='+($("#ssjgmc").val()||"")+'&projectTypeId='+($("#fwnrdl").val()||"")+'&start='+start+'&end='+end});
+        });
 
         function setDown(dom,str){
             if(str.indexOf(".jpg") != -1 || str.indexOf(".png") != -1){
