--- a/src/main/resources/static/webApp/manager/serviceInfo.html
+++ b/src/main/resources/static/webApp/manager/serviceInfo.html
@@ -9,7 +9,12 @@
 	<link rel="stylesheet" href="../../css/init.css">
 	<link rel="stylesheet" href="../../css/search_form.css">
 	<style>
-
+		.detail-box .layui-form-item .layui-input-inline {
+			width: 300px;
+		}
+		.detail-box.layui-form-pane .layui-form-label {
+			width: 200px;
+		}
 	</style>
 </head>
 <body>
@@ -76,20 +81,11 @@
 </div>
 
 <div id="editPanel" class="modal" style="display: none;">
-	<form class="layui-form" lay-filter="org-form" action="">
+	<form class="layui-form layui-form-pane detail-box" lay-filter="org-form" action="" style="padding: 20px;">
 		<div class="layui-form-item">
 			<label class="layui-form-label">残疾人服务内容大类</label>
 			<div class="layui-input-inline">
-				<select name="projectTypeId" lay-verify="required" disabled="disabled">
-					<option value="">请选择</option>
-					<option value="1">日间照料</option>
-					<option value="2">辅助性就业</option>
-					<option value="3">康复服务</option>
-					<option value="4">文体活动</option>
-					<option value="5">学习培训</option>
-					<option value="6">志愿者服务</option>
-					<option value="7">其他</option>
-				</select>
+				<input type="text" name="projectType" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
 			</div>
 		</div>
 
@@ -119,35 +115,59 @@
 				<input type="text" name="description" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
 			</div>
 		</div>
-
 		<div class="layui-form-item">
-			<div class="layui-inline">
-				<label class="layui-form-label">项目图片</label>
-				<div id="xmtp" class="layui-input-inline">
-				</div>
-			</div>
-		</div>
-
-
-		<div class="layui-form-item">
-			<label class="layui-form-label">项目开始时间</label>
+			<label class="layui-form-label">总服务人数</label>
 			<div class="layui-input-inline">
-				<input id="startime"  placeholder="yyyy-MM-dd" type="text" name="startTime" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+				<input type="text" name="personTimeSum" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
 			</div>
 		</div>
 		<div class="layui-form-item">
-			<label class="layui-form-label">项目结束时间</label>
+			<label class="layui-form-label">总服务人次</label>
 			<div class="layui-input-inline">
-				<input id="endtime"  placeholder="yyyy-MM-dd" type="text" name="endTime" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+				<input type="text" name="personCountSum" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">总服务时长</label>
+			<div class="layui-input-inline">
+				<input type="text" name="totalTimeSum" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">平均服务时长</label>
+			<div class="layui-input-inline">
+				<input type="text" name="averageTime" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">提交人</label>
+			<div class="layui-input-inline">
+				<input type="text" name="adminName" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+		<!--<div class="layui-form-item">-->
+			<!--<div class="layui-inline">-->
+				<!--<label class="layui-form-label">项目图片</label>-->
+				<!--<div id="xmtp" class="layui-input-inline">-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+
+
+		<div class="layui-form-item">
+			<label class="layui-form-label">提交时间</label>
+			<div class="layui-input-inline">
+				<input id="startime"  placeholder="yyyy-MM-dd" type="text" name="createTime" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">更新时间</label>
+			<div class="layui-input-inline">
+				<input id="endtime"  placeholder="yyyy-MM-dd" type="text" name="lastModifyTime" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" disabled="disabled">
 			</div>
 		</div>
 
-		<div class="layui-form-item">
-			<div class="layui-input-block">
-				<button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
-				<button type="reset" class="layui-btn layui-btn-primary">重置</button>
-			</div>
-		</div>
+		
 	</form>
 </div>
 
