--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -107,8 +107,8 @@
 
 	<div class="layui-footer">
 		<!-- 底部固定区域 -->
-		<span>版权所有：句容市民政局 备案许可号：镇ICP备XXXXX号</span>
-		<span>技术支持：xxx有限公司</span>
+		<!--<span>版权所有：句容市民政局 备案许可号：镇ICP备XXXXX号</span>-->
+		<!--<span>技术支持：xxx有限公司</span>-->
 	</div>
 </div>
 <script src="js/jquery.min.js"></script>
