--- a/src/main/resources/static/webApp/projectRunStatistics.html
+++ b/src/main/resources/static/webApp/projectRunStatistics.html
@@ -57,8 +57,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text">12000</span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text">12000</span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -89,8 +89,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text">12000</span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -105,8 +105,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text">12000</span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text">12000</span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -137,8 +137,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text">12000</span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -153,8 +153,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text">12000</span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text">12000</span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -169,8 +169,8 @@
                         <div class="numbers">
                             <p>总服务人数: <span class="bold-text">200</span></p>
                             <p>总服务人次: <span class="bold-text">6000</span></p>
-                            <p>总服务时长: <span class="bold-text"></span> 分钟</p>
-                            <p>平均服务时长: <span class="bold-text">20</span> 分钟</p>
+                            <p>总服务时长: <span class="bold-text"></span> 小时</p>
+                            <p>平均服务时长: <span class="bold-text">20</span> 小时</p>
                         </div>
                     </div>
                 </div>
@@ -213,8 +213,8 @@ layui.use(['table', 'form'], function () {
             html.push('<div class="numbers">');
             html.push('<p>总服务人数: <span class="bold-text">'+array[i].personCountSum+'</span></p>');
             html.push('<p>总服务人次: <span class="bold-text">'+array[i].personTimeSum+'</span></p>');
-            html.push('<p>总服务时长: <span class="bold-text">'+array[i].averageTime+'</span> 分钟</p>');
-            html.push('<p>平均服务时长: <span class="bold-text">'+array[i].totalTimeSum+'</span> 分钟</p>');
+            html.push('<p>平均服务时长: <span class="bold-text">'+array[i].averageTime+'</span> 小时</p>');
+            html.push('<p>总服务时长: <span class="bold-text">'+array[i].totalTimeSum+'</span> 小时</p>');
             html.push('</div></div>');
             html.push('</div></div></div>');
         }
