--- a/src/main/resources/static/webApp/projectInfo.html
+++ b/src/main/resources/static/webApp/projectInfo.html
@@ -79,9 +79,9 @@
         <div class="layui-col-sm3">
             <div class="grid-project">
                 <div class="project-info">
-                    <h2>总服务时长:</h2>
+                    <h2>平均服务时长:</h2>
                     <div class="numbers">
-                        <p><span datakey="averageTime" class="bold-text">12000</span>分钟</p>
+                        <p><span datakey="averageTime" class="bold-text">12000</span>小时</p>
                     </div>
                 </div>
             </div>
@@ -89,9 +89,9 @@
         <div class="layui-col-sm3">
             <div class="grid-project">
                 <div class="project-info">
-                    <h2>平均服务时长:</h2>
+                    <h2>总服务时长:</h2>
                     <div class="numbers">
-                        <p><span datakey="totalTimeSum" class="bold-text">20</span>分钟</p>
+                        <p><span datakey="totalTimeSum" class="bold-text">20</span>小时</p>
                     </div>
                 </div>
             </div>
