--- a/src/main/resources/static/webApp/manager/disabledHomeInfo.html
+++ b/src/main/resources/static/webApp/manager/disabledHomeInfo.html
@@ -55,7 +55,7 @@
 
 		table.render({
 			elem: '#mainTable',
-			url:'/api/org/getPageByDistrict?sorts=id&'+("")+'district=雨花台区'+(""),
+			url:'/api/org/getPageByDistrict?sorts=id&'+("")+'district=320114'+(""),
         request: {
                 pageName: 'page', //页码的参数名称，默认：page
                 limitName: 'number' //每页数据量的参数名，默认：limit
