--- a/src/main/resources/static/webApp/subsidyApplyOrg.html
+++ b/src/main/resources/static/webApp/subsidyApplyOrg.html
@@ -54,13 +54,16 @@
 		var table = layui.table;
 
         function smail(str){
-            if(str.indexOf(".jpg") != -1 || str.indexOf(".png") != -1){
-                return '<img src="'+str+'" style="width: 30px;">'
-            }else if(str.indexOf(".doc") != -1 || str.indexOf(".docx") != -1){
-                return '<img src="../images/word.png" style="width: 30px;">'
-            }else if(str.indexOf(".xls") != -1 || str.indexOf(".xlsx") != -1){
-                return '<img src="../images/xls.png" style="width: 30px;">'
-            }
+            if(str){
+                if(str.indexOf(".jpg") != -1 || str.indexOf(".png") != -1){
+                    return '<img src="'+str+'" style="width: 30px;">'
+                }else if(str.indexOf(".doc") != -1 || str.indexOf(".docx") != -1){
+                    return '<img src="../images/word.png" style="width: 30px;">'
+                }else if(str.indexOf(".xls") != -1 || str.indexOf(".xlsx") != -1){
+                    return '<img src="../images/xls.png" style="width: 30px;">'
+                }
+			}
+
 
         }
 
@@ -89,25 +92,25 @@
 				{field:'adminName', width:120, title: '机构名称', sort: true},
 				{field:'registrationTime', width:130, title: '登记注册时间', sort: true},
 				{field:'address', width:130, title: '地址'},
-				{field:'personInCharge', title: '负责人', minWidth: 120, sort: true},
-				{field:'area', width:80, title: '机构面积', sort: true},
-				{field:'bedNum', width:80, title: '床位数', sort: true},
-				{field:'nature', width:80, title: '机构性质', sort: true},
-				{field:'asylumLaborProjects', width:135, title: '庇护性劳动项目', sort: true},
+				{field:'personInCharge', title: '负责人', width: 120, sort: true},
+				{field:'area', width:180, title: '机构面积', sort: true},
+				{field:'bedNum', width:180, title: '床位数', sort: true},
+				{field:'nature', width:180, title: '机构性质', sort: true},
+				{field:'asylumLaborProjects', minWidth:135, title: '庇护性劳动项目', sort: true},
 				{field:'numOfEligibleDayNursery', width:135, title: '符合条件的全托人数'},
 				{field:'numOfEligibleBoardingNursery', width:135, title: '符合条件的日托人数', sort: true},
 				{field:'subsidyFundForBoardingNursery', width:135, title: '申请机构全托运营补贴资金总额', sort: true},
 				{field:'subsidyFundForDayNursery', width:135, title: '申请机构日托运营补贴资金总额', sort: true},
 				{field:'localInvestmentOfLastYear last_year', width:135, title: '上年当地资金投入情况', sort: true},
-				{field:'totalSubsidyFunds', width:135, title: '申请托养机构运营补贴资金总额合计'},
+				{field:'totalSubsidyFunds', width:235, title: '申请托养机构运营补贴资金总额合计'},
 				{field:'nursingList', width:135, title: '托养残疾人名单',templet: function(d){
                         return smail(d.nursingList);
                     }},
 				{field:'lowIncomeCertificate', width:135, title: '低保或其他低收入证明',templet: function(d){
                         return smail(d.lowIncomeCertificate);
                     }},
-				{field:'adminName', width:135, title: '提交人'},
-				{field:'createTime', width:135, title: '提交时间', sort: true}
+				{field:'adminName', minWidth:235, title: '提交人'},
+				{field:'createTime', width:235, title: '提交时间', sort: true}
 			]]
 			,page: true
 		});
