--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -118,7 +118,7 @@
         //iframe 路由切换
         var menuUrl = sessionStorage.menuUrl;
         if(!menuUrl){
-            menuUrl="webApp/oldInfo.html"
+            menuUrl="webApp/manager/cockpit.html"
         }
         $("#mainPage").attr("src", menuUrl);
         //添加选中下划线
