--- a/src/main/resources/static/webApp/manager/disabledHomeInfo.html
+++ b/src/main/resources/static/webApp/manager/disabledHomeInfo.html
@@ -47,7 +47,7 @@
 <script>
 
     function exportfile() {
-        window.location = "/api/org/export_excel?district=雨花台区";
+        window.location = "/api/org/export_excel?district=320114";
     }
 
 	layui.use('table', function(){
