--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -111,7 +111,7 @@
 		</div>
 		<div class="layui-input-inline">
 			<select lay-filter="cdistinct_sele" id="cdistinct_sele" name="district" lay-verify="required">
-				<option value="雨花台区">区/县</option>
+				<option value="320114">区/县</option>
 			</select>
 		</div>
 		<div class="layui-input-inline">
