--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -70,7 +70,7 @@
 				<li class="layui-nav-item">
 					<a href="javascript:;">全区残疾人基本信息</a>
 					<dl class="layui-nav-child">
-						<dd><a href="webApp/manager/disabledCount.html">全区残疾人统计</a></dd>
+						<dd><a href="webApp/manager/disabledCount.html">各残疾人之家残疾人统计</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
