--- a/src/main/resources/static/webApp/manager/cockpit.html
+++ b/src/main/resources/static/webApp/manager/cockpit.html
@@ -276,7 +276,7 @@
 		$.ajax({
 			url: "/api/project/overview1",
 			type: "GET",
-			data: { district: "320114"},
+			data: { district: "雨花台区"},
 			success: function(res) {
 				if(res ){
 					const {data ={}	} = res;
