--- a/src/main/resources/static/webApp/manager/disabledCount.html
+++ b/src/main/resources/static/webApp/manager/disabledCount.html
@@ -21,7 +21,7 @@
 		<div class="layui-form-item layui-tab-title">
 			<div class="layui-inline" style="padding:0 10px;">
 				<i
-						class="layui-icon layui-icon-read"></i>全区残疾人统计
+						class="layui-icon layui-icon-read"></i>各个残疾人之家的残疾人统计
 			</div>
 		</div>
 		<div class="layui-form-item operate-bar" style="margin:0;padding:0 10px;">
