--- a/src/main/resources/static/webApp/manager/serviceAnalyze.html
+++ b/src/main/resources/static/webApp/manager/serviceAnalyze.html
@@ -246,7 +246,7 @@
 	$.ajax({
 		url: "/api/project/projectAnalysis",
 		type: "GET",
-		data: {district: "320114"},
+		data: {district: "雨花台区"},
 		success: function(res) {
 			console.log("/api/project/projectAnalysis",res);
 			if(res ){
