--- a/src/main/resources/static/webApp/disabledHomeStatiscs.html
+++ b/src/main/resources/static/webApp/disabledHomeStatiscs.html
@@ -62,7 +62,7 @@
 
         $.ajax({
             type: "GET",
-            url: "/api/apply/getStatistic?district=320114",
+            url: "/api/apply/getStatistic?district=雨花台区",
             success: function (data) {
                 if(data.data){
                     $("#boxs").html(setBox(data.data));
