--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -111,7 +111,7 @@
 		</div>
 		<div class="layui-input-inline">
 			<select lay-filter="cdistinct_sele" id="cdistinct_sele" name="district" lay-verify="required">
-				<option value="320114">区/县</option>
+				<option value="雨花台区">区/县</option>
 			</select>
 		</div>
 		<div class="layui-input-inline">
@@ -379,7 +379,10 @@
             if(!_data.city){
                 _data.city = _data.province
 			}
-
+            _data.province = provinceList[_data.province];
+            _data.city = provinceList[_data.city];
+            _data.distinct = provinceList[_data.distinct];
+            _data.block = window["bloks"][_data.block];
             $.ajax({
                 type: "POST",
                 url: "/api/org/saveAndFlush",
@@ -444,6 +447,7 @@
                 url: 'http://passer-by.com/data_location/town/' + value + '.json',
                 dataType: 'json',
                 success: function(town) {
+                    window["bloks"] = town;
                     for(var key in town){
                         html.push('<option value="'+key+'">'+town[key]+'</option>');
 					}
