--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="layui-input-inline">
 			<select lay-filter="cdistinct_sele" id="cdistinct_sele" name="distinct">
-				<option value="320114">区/县</option>
+				<option value="雨花台区">区/县</option>
 			</select>
 		</div>
 		<div class="layui-input-inline">
@@ -290,6 +290,10 @@
             _data.adminId = localStorage.getItem("userId");
             _data.organizationId = localStorage.getItem("jgid");
             _data.lowIncomeCertificate = IMGS.join(",");
+            _data.province = provinceList[_data.province];
+            _data.city = provinceList[_data.city];
+            _data.distinct = provinceList[_data.distinct];
+            _data.block = window["bloks"][_data.block];
             $.ajax({
                 type: "POST",
                 url: "/api/apply/saveAndFlush",
@@ -342,6 +346,7 @@
                 url: 'http://passer-by.com/data_location/town/' + value + '.json',
                 dataType: 'json',
                 success: function(town) {
+                    window["bloks"] = town;
                     for(var key in town){
                         html.push('<option value="'+key+'">'+town[key]+'</option>');
                     }
