--- a/src/main/resources/static/webApp/subsidyApplyOrg.html
+++ b/src/main/resources/static/webApp/subsidyApplyOrg.html
@@ -112,9 +112,9 @@
 				{field:'nursingList', width:135, title: '托养残疾人名单',templet: function(d){
                         return smail(d.nursingList);
                     }},
-				{field:'lowIncomeCertificate', width:135, title: '低保或其他低收入证明',templet: function(d){
-                        return smail(d.lowIncomeCertificate);
-                    }},
+//				{field:'lowIncomeCertificate', width:135, title: '低保或其他低收入证明',templet: function(d){
+//                        return smail(d.lowIncomeCertificate);
+//                    }},
 				{field:'adminName', minWidth:235, title: '提交人'},
 				{field:'createTime', width:235, title: '提交时间', sort: true},
                 {field:'id', title: '操作', width:130,templet: function(d){
